--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
                <li><i class="fa fa-star"></i></li>
                <li><i class="fa fa-star"></i></li>
           </ul>
-          <span class="moves"></span> Moves
+          <span class="moves"></span> Moves <span class="timer">0 seconds </span>
           <div class="restart"> <i class="fa fa-repeat"></i> </div>
      </section>
      <ul class="deck">
-		 
      </ul>
+</div>
+<!-- Modal that opens up when game is finished -->
+<div id="end-modal" class="modal">
+     <div class="modal-content">
+          <h1>You won!</h1>
+          <p id="end-text"></p>
+          <button class="modalBtn" id="newGame">Play again</button>
+          <button class="modalBtn" id="closeGame">End Game</button>
+     </div>
 </div>
 <script src="js/app.js"></script>
 </body>
