--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <li><i class="fa fa-star"></i></li>
                <li><i class="fa fa-star"></i></li>
           </ul>
-          <span class="moves"></span> Moves <span class="timer">0 seconds </span>
+          <span class="moves"></span> Moves <span class="timer-output">0</span>
           <div class="restart"> <i class="fa fa-repeat"></i> </div>
      </section>
      <ul class="deck">
